added dialogsetting, edit component sass template

--- a/component/templates/component.scss
+++ b/component/templates/component.scss
@@ -1,3 +1,9 @@
-.<%= name %> {
-  background: #bbbcbc;
+$name: '<%= name %>';
+
+@include settings((
+  background: #bbcbbc,
+));
+
+.#{$name} {
+  background: setting(background);
 }
